show melbourne and sydeny map

--- a/front-end/html/css/app.css
+++ b/front-end/html/css/app.css
@@ -99,7 +99,7 @@ body {
 .border-bottom { border-bottom: 1px solid #e5e5e5; }
 
 
-.local-gov {
+.sa2 {
   stroke: #fff;
   stroke-linejoin: round;
   stroke-width: 1;
