--- a/front-end/html/css/app.css
+++ b/front-end/html/css/app.css
@@ -91,6 +91,36 @@ body {
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
 
+body {
+  margin : 0
+}
+
+#chart {
+  display: block;
+  margin: 10px auto;
+}
+
+#title {
+  font-size: 24px;
+  text-anchor: middle;
+}
+
+#x-label {
+  font-size: 15px;
+  text-anchor: middle;
+}
+
+#tooltip {
+  background-color: rgba(187,187,187, 0.7);
+  border-radius: 5px;
+  height: 18px;
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  text-align: center;
+}
+
+
 /*
  * Utilities
  */
